[tool.poetry]
name = "meow-ai"
version = "1.0.3"
description = "以 OpenAI API 格式使用 LLM"
authors = ["meowjiao321 <meowjiao321@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.3.6"
colorama = "^0.4.6"
pyreadline3 = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meow-ai = "meow_ai:main"
